# fh6-trader-bot

./: .gitignore  README.md  build_release.bat  build_standalone.bat  config.toml  pyproject.toml  requirements.txt  run_bot.bat  trade-bot.spec
bot/: __init__.py  capture.py  cli.py  config.py  detector.py  hotkeys.py  input.py  runtime.py  screens.py  state_machine.py  window.py
scripts/: build_release.py  build_standalone.py
tests/: test_detector.py  test_runtime.py  test_state_machine.py
